# pi0ir

./: README.md  mise.toml  pyproject.toml
samples/: sample01-recv-analyze.py
src/pi0ir/: __init__.py  __main__.py  cmd_iranalyze.py  cmd_irrecv.py  iranalyze.py  irconfig.py  irrecv.py
src/pi0ir/utils/: clibase.py
tests/: raw_data-AEHA-1.txt  raw_data-NEC-1.txt  raw_data-SONY-1.txt  test_01_analyze.py
